Project setuped and starting to work

--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -10,6 +10,10 @@ $success-light: #bef264;
 $success-normal: #84cc16;
 $success-dark: #4d7c0f;
 
+$error-light: #fca5a5;
+$error-normal: #ef4444;
+$error-dark: #991b1b;
+
 /* text & backgrounds*/
 
 $light-light: #f1f5f9;
