--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,10 @@
 @use "/src/styles/utilities/variables" as v;
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+* {
+  margin: 0;
+}
+
 body {
   font-family: "Lato", sans-serif;
   background-color: v.$light-light;
