--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,4 +9,7 @@ body {
   font-family: "Lato", sans-serif;
   background-color: v.$light-light;
   color: v.$dark-normal;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
