--- a/src/styles/pages/hero.scss
+++ b/src/styles/pages/hero.scss
@@ -1,1 +1,18 @@
 @use "../utilities/variables" as v;
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  gap: 30px;
+  h1 {
+    font-size: 100px;
+    font-weight: 900;
+    color: v.$primary-dark;
+  }
+  p {
+    font-size: 40px;
+  }
+}
